<resources>
    <string name="app_name">Filled</string>
    <string name="action_settings">Settings</string>

    <string name="welcome">Welcome to Filled</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_home">home</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_sign_up">signUp</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="cell">Cell Phone</string>
    <string name="passw">Password</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="slow">Control Alt Manage</string>

    <string name="email">Email</string>

</resources>
